src/sass/global.sass
@import fonts
@import colors

*, *::before, *::after
  margin: 0
  padding: 0
  box-sizing: border-box
  -webkit-tap-highlight-color: transparent

html
  overflow: hidden

body
  font-family: 'MADETOMMY', sans-serif
  background-color: var(--background)
  color: var(--text)
  min-height: 100vh

button
  background-color: transparent
  border: none
  fill: white
  cursor: pointer

  &:hover
    color: var(--border)
    fill: var(--border)

a
  &, svg
    color: var(--text)
    fill: var(--text)

  &:hover, &:hover svg
    color: var(--border)
    fill: var(--border)

a, button
  &:focus
    outline: 1px dotted var(--border)

